Editorial changes (typos, grammar, ...)

--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -63,8 +63,7 @@
     <h2>Summary</h2>
     <p>Ludwik Fleck (1896-1961) was a Polish serologist and microbiologist who worked,
       among other things, on vaccines for <a href="https://en.wikipedia.org/wiki/Typhus">typhus</a>.
-      In his spare time, he also published articles and a monograph on philosophy of science
-      and sociology of science. 
+      In his spare time, he also published articles and a monograph on philosophy of science. 
       He coined the concepts &ldquo;thought style&rdquo; (<span lang="de">Denkstil</span>) 
       and &ldquo;thought collective&rdquo; (<span lang="de">Denkkollektiv</span>) to
       describe how scientific ideas and discoveries are also determined by their social and
@@ -78,26 +77,28 @@
       advocated by the 
       <a href="https://en.wikipedia.org/wiki/Vienna_Circle">Vienna Circle</a>,
       but unlike Popper's book, Fleck's work was overlooked by most philosophers of science.
-      <br />After the Nazis captured his hometown Lvov in 1941, he first lived in a ghetto and later 
-      in Buchenwald. Both in the ghetto and later in Buchenwald, he worked on a typhus vaccine (in addition to other medical work). 
+      <br />After the Nazis captured his hometown Lvov in 1941, he first lived in the Lvov ghetto and later 
+      in the Buchenwald concentration camp. 
+      Both in the ghetto and later in Buchenwald, he worked on a typhus vaccine (in addition to other medical work). 
       After the war, Fleck continued his work in microbiology and immunology.
       He emigrated to Israel in 1956, where he died in 1961.
-      <br />His work influenced Thomas Kuhn's 
+    </p>
+    <p>Fleck's work influenced Thomas Kuhn's 
       <a href="https://en.wikipedia.org/wiki/The_Structure_of_Scientific_Revolutions" class="booktitle">The Structure of Scientific Revolutions</a>,
       which was published just one year after Fleck's death.
       The Fleck renaissance that started in the 1970s initially gave rise to studies on Fleck as a precursor of Kuhn, 
-      but Fleck's theory is now studies in its own right and has been applied to the study of as diverse as
+      but Fleck's theory is now studied in its own right and has been applied to the study of disciplines as diverse as
       aesthetics, (the history of) quantum mechanics, science pedagogy and visualisation in medicine (Fleck, 2011: 13-14).
       There were at least five Fleck conferences between 2005 and 2011.
     </p>
-    <p>Fleck's work in philosophy of sociology of science is significant in several respects:
+    <p>Fleck's work in philosophy or sociology of science is significant in several respects:
     </p>
     <ul>
       <li>Fleck was the first philosopher to look at science from a sociological point of view;
         this sociological approach did not gain popularity until the publication of 
         Thomas Kuhn's <i class="booktitle">The Structure of Scientific Revolutions</i> in 1961.
         <br />Fleck criticised the &ldquo;heroic&rdquo; view of scientific progress that attributes
-        new discoveries to individual research instead of thought collectives.
+        new discoveries to individual researchers instead of thought collectives.
         <!-- Cf. EET, chapter 4.2 -->
         (The heroic view was still present in Kuhn's work.)
         Fleck was probably the first philosopher who pointed out the importance of 
@@ -117,7 +118,7 @@
     <h2>Biography</h2>
     <p>The first researchers to collect biographical information on Ludwik Fleck were
       W. Baldamus (1976, 1977) and Thomas Schnelle (1982). 
-      The biography in 1983 edition of 
+      The biography in the 1983 edition of 
       <i class="booktitle" lang="de">Entstehung und Entwicklung einer wissenschaftlichen Tatsache</i>
       closely follows the biography by Schnelle (1982).
       Grzybowski &amp; Ciesielska (2014) published additional information based on materials from the
@@ -127,17 +128,17 @@
       The following biography is mainly based on Thomas Schnelle's disseration (1982).
     </p>
     <h3>Before World War II</h3>
-    <p>Ludwik Fleck was born 11 July 1896 in <a href="https://en.wikipedia.org/wiki/Lviv">Lvov</a>.
+    <p>Ludwik Fleck was born in <a href="https://en.wikipedia.org/wiki/Lviv">Lvov</a> on 11 July 1896.
       At the time, the city was known as <span lang="de">Lemberg</span> and was the capital of the
       <a href="https://en.wikipedia.org/wiki/Kingdom_of_Galicia_and_Lodomeria">Kingdom of Galicia and Lodomeria</a>,
       a crown land of the Habsburg Monarchy from 1804 to 1918. 
       The Austro-Hungarian Empire allowed its territories a certain degree of cultural autonomy,
-      so Lemberg had Polish schools and its university was allowed to teach on Polish from 1879 onwards.
+      so Lemberg had Polish schools and its university was allowed to teach in Polish from 1879 onwards.
       (See also <a href="https://en.wikipedia.org/wiki/History_of_Galicia_%28Eastern_Europe%29#Galician_autonomy">Galician autonomy</a> on Wikipedia.)
       Thanks to this cultural tolerance, German-language culture met with a lot of interest.
     </p>
     <p>Ludwik Fleck went to a Polish gymnasium but also learnt perfect German (just like his two sisters).
-      In 1914, Fleck started studying medicine at <a href="https://en.wikipedia.org/wiki/Lviv_University">John II Casimir University (or Jan Kazimierz University)</a>,
+      In 1914, Fleck started studying medicine at the <a href="https://en.wikipedia.org/wiki/Lviv_University">John II Casimir University (or Jan Kazimierz University)</a>,
       but his studies were soon interrupted by the outbreak of the First World War.
       Nevertheless, he received his medical degree in 1918.
     </p>
@@ -167,14 +168,14 @@
         thereby causing the infection.
         Typhus caused many victims on the eastern front line during both World Wars: 
         especially in <abbr title="prisoner of war">POW</abbr> camps (World War I), 
-        in concentration camps and the 
+        in concentration camps and during the 
         <a href="https://en.wikipedia.org/wiki/Battle_of_Stalingrad">Battle of Stalingrad</a> (World War II).
       </p>
       <p>The French bacteriologist
         <a href="https://en.wikipedia.org/wiki/Charles_Nicolle" lang="fr">Charles Nicolle</a>
         discovered that body lice were the vector of the disease in 1909
-        (Nobel Prize in Physiology or Medicine, 1928) but was not able to develope a practical vaccine.
-        The first research to develop an effective vaccine was the Polisch biologist
+        (Nobel Prize in Physiology or Medicine, 1928) but was not able to develop a practical vaccine.
+        The first researcher to develop an effective vaccine was the Polisch biologist
         <a href="https://en.wikipedia.org/wiki/Rudolf_Weigl">Rudolf Weigl</a>, in the early 1930s.
         The vaccine was hard to produce on a large scale because it involved feeding infected lice
         on human volunteers and crushing the lice intestines into a vaccine paste. 
@@ -191,7 +192,7 @@
         which is carried by body lice,
         typhoid fever is caused by
         <a href="https://en.wikipedia.org/wiki/Salmonella_enterica_subsp._enterica">Salmonella typhi</a>
-        bacteria that are ingested when eating or drinking foor or water that is contaminated
+        bacteria that are ingested when eating or drinking food or water that is contaminated
         with the faeces of an infected person.
         The names of the two diseases are also often confused in translations,
         especially when translating between Germanic languages.
@@ -208,7 +209,7 @@
 
     <p>Between 1923 and 1925, Fleck worked at the department for internal medicine at 
       Lvov's general hospital; between 1925 and 1927 he was the head of the bacteriological lab
-      of the department for dermatology and venereology in the same hospital.
+      of the department for dermatology and venereology at the same hospital.
       From 1923 until 1939, Fleck could not gain a new university position; this
       was probably due to anti-Jewisch tensions. 
       In 1923, he had started a private bacteriological lab, where he continued his own research.
@@ -230,15 +231,15 @@
     <!-- Married in 1923; son Ryszard born in 1924. Fleck only spoke about his work with people he considered qualified; 
       nobody remembers talking to Fleck about his work in philosophy of science.
     -->
-    <p>In the 1920s he also started publishing articles on philosophy of science. 
+    <p>In the 1920s he started publishing articles on philosophy of science. 
       Fleck had already studied philosophy at university, and he continued reading
       philosophy, sociology and history of science after receiving his medical degree.
-      His reading in this areas was apparently not very systematic. 
+      His reading in these areas was apparently not very systematic. 
       He worked on <i class="booktitle" lang="de">Entstehung und Entwicklung einer wissenschaftlichen Tatsache</i>
       between 1931 and 1934. 
       <br />Fleck was very selective in the people with whom he discussed his work.
       One of the people with whom Fleck had regular discussions was the psychiatrist and philosopher
-      <a href="https://pl.wikipedia.org/wiki/Jakub_Frostig" title="Jakub Frostig in the Polish Wikipedia" hreflang="pl">Jakub or Jakób Frostig</a>.
+      <a href="https://pl.wikipedia.org/wiki/Jakub_Frostig" title="Jakub Frostig in the Polish Wikipedia" hreflang="pl">Jakub (or Jakób) Frostig</a>.
     </p>
     <p>Lvov had a rich intellectual life and its university had many distinguished researchers:
       the mathematicians Hugo Steinhaus and 
@@ -268,7 +269,7 @@
       <a href="https://en.wikipedia.org/wiki/Jan_%C5%81ukasiewicz">Jan Łukasiewicz</a> and
       <a href="https://en.wikipedia.org/wiki/Alfred_Tarski">Alfred Tarski</a>.
       Twardowski's lectures were attended by students from all disciplines and by guests from other universities;
-      the university's biggest lecture hall was too small so the lectures has to be held in the city's biggest concert hall.
+      the university's biggest lecture hall was too small so the lectures had to be held in the city's biggest concert hall.
       <br />The other chair in philosophy was held by 
       <a href="https://pl.wikipedia.org/wiki/M%C5%9Bcis%C5%82aw_Wartenberg" title="Mścisław Wartenberg in the Polish Wikipedia" hreflang="pl">Mścisław Wartenberg</a>,
       who specialised in <a href="https://en.wikipedia.org/wiki/Immanuel_Kant">Kant</a> and
@@ -281,13 +282,13 @@
     </p>
 
     <h3>World War II</h3>
-    <p>In 1939, at the start of World War II, Galicia was occupied by the Sowjets and became part of the
-      <a href="https://en.wikipedia.org/wiki/Ukrainian_Soviet_Socialist_Republic">Ukrainian Soviet Socialist Republic (Ukranian <abbr>SSR></abbr>)</a>.
+    <p>In 1939, at the start of World War II, Galicia was occupied by the Sowjets <!-- @@check spelling --> and became part of the
+      <a href="https://en.wikipedia.org/wiki/Ukrainian_Soviet_Socialist_Republic">Ukrainian Soviet Socialist Republic (Ukranian <abbr>SSR</abbr>)</a>.
       The medical school of the Jan Kazimierz University became an autonomous institution,
-      and Fleck was made head of its microbiology department.
+      and Fleck was made<!-- @@appointed? --> head of its microbiology department.
       When Germany invaded Galicia in June 1941 (Operation Barbarossa), Fleck lost his position
       and had to move into the 
-      <a href="https://en.wikipedia.org/wiki/Lw%C3%B3w_Ghetto">Lwów Ghetto</a> with his wife and his son.
+      <a href="https://en.wikipedia.org/wiki/Lw%C3%B3w_Ghetto">Lwów Ghetto</a> with his wife and son.
       At that time, there were roughly 140.000 Jews in Lvov, representing 30% of the population.
       By autumn 1942, there were only 15.000 Jews left in the ghetto and 12.000 in the labour camp.
       According to Fleck, roughly 70% of the people in the ghetto became infected with typhus (see Fleck's testimony in Kogon, 1946, cited in Schnelle, 1982: 50-51).
@@ -322,7 +323,7 @@
     <p>In December 1943 or January 1944, Fleck and his family were moved to the
       <a href="https://en.wikipedia.org/wiki/Buchenwald_concentration_camp">Buchenwald concentration camp</a>,
       where he was forced to contribute to the development of a typhus vaccine from
-      the lungs of infected mice or rabbits, according to a method developed by the Frenchman
+      the lungs of infected mice or rabbits according to a method developed by the Frenchman
       <a href="http://www.pasteur.fr/infosci/archives/grp0.html">Paul Giroud</a>.
     </p>
     <p>In Buchenwald, the German physician and <span lang="de">Waffen-<abbr>SS</abbr></span> officer
@@ -344,7 +345,7 @@
       in April 1945.
     </p>
     <p>Before Ludwik Fleck's arrival in Block 50 in Buchenwald, the team had been producing
-      what they thought was a mild typhus vaccine. When Fleck noticed that they had confused to
+      what they thought was a mild typhus vaccine. When Fleck noticed that they had confused the
       Rickettsia bacteria with something else, they asked him not to reveal this to
       <span lang="de">Ding-Schuler</span>. They later managed to produce a proper typhus vaccine
       after receiving infected mice lungs and intestines from Kraków. This vaccine could only 
@@ -396,7 +397,7 @@
       <a href="https://en.wikipedia.org/wiki/Leukocytosis">leukocytosis</a>, which refers to
       a higher leukocyte count in the blood.
     </p>
-    <p>Fleck also remained interested in philosophy and psychology and continued publishing
+    <p>Fleck also remained interested in philosophy and psychology, and continued publishing
       articles on philosophy of science. He probably worked on a new book that would constitute
       the continuation of <i class="booktitle" lang="de">Entstehung und Entwicklung einer wissenschaftlichen Tatsache</i>.
       Unfortunately, the manuscript for this new book could not be found after Fleck's death (Schnelle, 1982: 67).
