--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
 
     <h2 id="updates">Latest Updates</h2>
     <ul>
-      <li>December 2015: <a href="philosophy/hegel_gwf.html" lang="de">G. W. F. Hegel</a>.
+      <li>January 2016: new page: <a href="philscience/fleck_ludwik.html" lang="de">Ludwik Fleck</a>.</li>
+      <li>December 2015: new page: <a href="philosophy/hegel_gwf.html" lang="de">G. W. F. Hegel</a>.
       </li>
-      <li>December 2015: <a href="humanities/girard_rene.html" lang="fr">René Girard</a>:
-        an exhaustive list of his books and an overview of obituaries and commemorations.
+      <li>December 2015:new page: <a href="humanities/girard_rene.html" lang="fr">René Girard</a>
+        with an exhaustive list of his books and an overview of obituaries and commemorations.
       </li>
       <li>November 2015: why we still need <a href="philosophy/index.html">philosophy</a>.
       </li>
