--- a/philscience/index.html
+++ b/philscience/index.html
@@ -211,7 +211,8 @@
         <a href="http://press.uchicago.edu/ucp/books/book/chicago/T/bo3622037.html"><abbr>ISBN</abbr>  9780226300634</a>.
       </li>
       <!-- 
-        * Ladyman, James: Understanding Philosophy of Science. Routledge, 2001. (In 2009, Massimo Pigliucci wrote, "Still, I'm planning to use this book next semester in a 300-level class on philosophy of science, and I'm looking forward to the puzzled reactions of my students when they'll begin to appreciate how little we understand about how science works." http://www.amazon.com/Understanding-Philosophy-Science-James-Ladyman/dp/0415221579/
+        * Ladyman, James: Understanding Philosophy of Science. Routledge, 2001. 
+          (In 2009, Massimo Pigliucci wrote, "Still, I'm planning to use this book next semester in a 300-level class on philosophy of science, and I'm looking forward to the puzzled reactions of my students when they'll begin to appreciate how little we understand about how science works." http://www.amazon.com/Understanding-Philosophy-Science-James-Ladyman/dp/0415221579/
       -->
     </ul>
 
@@ -449,8 +450,9 @@
         Theory</a> by Nicole Pepperell (<abbr title="Royal Melbourne Institute of Technology">RMIT</abbr> 
         University).
       </li>
-      <li>Rupert Sheldrake:
-        <a href="https://www.youtube.com/watch?v=1TerTgDEgUE">The Science Delusion</a>,
+      <li id="sheldrake_banned_talk">Rupert Sheldrake:
+        <a href="https://www.youtube.com/watch?v=1TerTgDEgUE">The Science Delusion</a>
+        (and on the <a href="https://www.youtube.com/watch?v=JKHUaNAxsTg">RevolutionLoveEvolve channel</a>),
         a talk given at TEDxWhitechapel in January 2013. 
         This talk is based on ideas expressed in Sheldrake's book
         <a href="https://en.wikipedia.org/wiki/Rupert_Sheldrake#The_Science_Delusion"
@@ -601,8 +603,18 @@
       <li><a href="http://www.helsinki.fi/epsa13/"><abbr title="European Philosophy of Science Association">EPSA</abbr> 2013 conference</a>, Helsinki, Finland:
         the <a href="">book of abstracts</a> can be downloaded from the website. 
         <a href="https://www.youtube.com/results?search_query=epsa13+helsinki+tint+coe">Video recordings of the presentations</a> are available on YouTube;
-        unfortunately, there is no handy playlist to make them easier to find. 
+        unfortunately, there is no handy playlist to make them easier to find.
       </li>
+      <li><a href="https://en.wikipedia.org/wiki/Logology_%28science_of_science%29">Logology (science of science)</a>:
+        article on Wikipedia.
+        (Logology was proposed in the 1930s as a discipline that would subsume several other disciplines, 
+        namely epistemology, philosophy of science, psychology of science and sociology of science.)<!-- @@the philosophy/psychology/sociology of science? -->
+      </li>
+      <!--li>Shermer, Michael: 
+        <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
+        <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
+      </li--><!-- referenced in Wikipedia article "logology"; @@check -->
+      <!-- @@check: Rens Bod (Univeristy of Amsterdam humanities professor - cited by Michael Shermer -->
     </ul>
   </main>
 
