Girard: editorial changes.

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -65,7 +65,7 @@
       (<abbr>i.e.</abbr> no 
       <a href="https://en.wikipedia.org/wiki/Experimental_psychology">psychological experiments</a>,
       <a href="https://en.wikipedia.org/wiki/Ethnohistory">ethnohistoric research</a> or 
-      <a href="https://en.wikipedia.org/wiki/Ethnography">ethnographic research</a>)
+      <a href="https://en.wikipedia.org/wiki/Ethnography">ethnographic research</a>).
     </p>
     <p>
       After writing a <abbr>PhD</abbr> dissertation in history, he moved from France to the United States,
@@ -137,7 +137,7 @@
       <li>
         <a href="http://www.rene-girard.fr/" lang="fr" hreflang="fr">Association Recherches Mimétiques</a>
         (established in 2006)
-        is a French organisation that structure and make widely known the research
+        is a French organisation that aims to structure and make widely known the research
         inspired by René Girard's mimetic theory.
         It is the French branch of Imitatio.
         The organisation also has a
@@ -160,13 +160,13 @@
       </li>
       <li>
         <a href="http://www.anthropoetics.ucla.edu/home.html" class="journal">Anthropoetics: The Journal of Generative Anthropology</a>
-        is an Open Access journal that took is starting point from 
+        is an Open Access journal that took its starting point from 
         Girard's theory about the origin of human culture.
         Eric Gans, who started the journal, also wrote
         <a href="http://www.anthropoetics.ucla.edu/gaintro.htm">A Brief Introduction to Generative Anthropology</a>.
       </li>
       <li>Andrade, Gabriel:
-        <a href="http://www.iep.utm.edu/girard/">René Girard (1923&mdash;&nbsp;)</a>in the
+        <a href="http://www.iep.utm.edu/girard/">René Girard (1923&mdash;2015)</a>: entry in the
         <i class="website">Internet Encyclopedia of Philosophy</i>.
       </li>
     </ul>
@@ -320,7 +320,7 @@
           </ul>
       </li>
       <li><span lang="fr">Girard, René</span>: 
-        <strong class="booktitle">A Theater of Envy: Shakespeare</strong> Oxford University Press, 1991.
+        <strong class="booktitle">A Theater of Envy: Shakespeare</strong>. Oxford University Press, 1991.
         <a href="http://www.grasset.fr/shakespeare-les-feux-de-lenvie-9782246249917"><abbr>ISBN</abbr> 9782246249917</a>. 
         <br />This book is based on journal articles that Girard had
         published in the 1970s and 1980s.<!-- @@check -->
@@ -400,8 +400,10 @@
         </ul>
       </li>
       <li lang="fr">Girard, René: 
-        <i class="booktitle">Les Origines de la culture</i>. <span lang="fr">Entretiens avec Pierpaolo Antonello et João César de Castro Rocha, suivi d’une réponse à Régis Debray sur ses critiques publiées dans Le feu sacré en 2003</span> 
-        2004. Fayard, 2011
+        <i class="booktitle">Les Origines de la culture</i>. 
+        <span lang="fr">Entretiens avec Pierpaolo Antonello et João César de Castro Rocha, 
+        suivi d’une réponse à Régis Debray sur ses critiques publiées dans <i>Le feu sacré</i> en 2003</span> 
+        2004<!-- @@check -->. Fayard, 2011
         <a href="http://www.fayard.fr/les-origines-de-la-culture-9782818502112"><abbr>ISBN</abbr> 9782818502112</a>.
         <br /><span lang="en">Translations:</span>
         <ul>
@@ -467,7 +469,7 @@
         </ul>
       </li>
       <li><span lang="fr">Girard, René</span>: 
-        <i class="booktitle">Mimesis and Theory: Essays on Literature and Criticism, 1953-2005</i>. Edited and with an introduction by Robet Doran. 
+        <i class="booktitle">Mimesis and Theory: Essays on Literature and Criticism, 1953-2005</i>. Edited and with an introduction by Robert Doran. 
         Cultural Memory in the Present. Stanford, California: Stanford University Press, 2008.
         <a href="http://www.sup.org/books/title/?id=10194"><abbr>ISBN</abbr> 978-0-8047-8107-7</a>.
         <br />This is a collection of 20 essays, seven of which were originally written in French.
@@ -493,7 +495,7 @@
         <abbr>ISBN</abbr> 978-3-88221-632-5.
         <br />This book consists of an introduction by René Girard (a lecture at the University of Virginia from November 2003),
         a conversation that was originally published in <i class="journal" lang="de">Sinn und Form</i> in 2001,
-        another conversation that was originally published in <i class="journal" lang="de">Sinn und Form</i> in 2007
+        another conversation that was originally published in <i class="journal" lang="de">Sinn und Form</i> in 2007,
         and an afterword by <span lang="de">Wolfgang Palaver</span>.
       </li>
       <li lang="fr">Girard, René: 
