Fleck: Biblio: Brühe & Theis.

--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -559,7 +559,7 @@
         that also points out that Thomas Kuhn 
         <q>regretted having used the notion of a gestalt switch to characterize changes in a community because “communities do not have experiences, much less gestalt switches.”</q>.
       </li>
-      <li>Baldamus, W.:
+      <li>Baldamus, Wilhelm:
         <a href="http://www.jstor.org/stable/25170507" lang="de">Das exoterische Paradox der Wissenschaftsforschung: Ein Beitrag zur Wissenschaftstheorie Ludwik Flecks</a>,
         <i class="journal"><span lang="de">Zeitschrift für allgemeine Wissenschaftstheorie</span> / Journal for General Philosophy of Science</i>,
         Vol. 10, No. 2 (1979), pp. 213-233.
@@ -569,6 +569,15 @@
         <i class="booktitle">Croix gammée contre caducée. Les expériences humaines en Allemagne pendant la deuxième guerre mondiale</i>.
         Neustadt: Impr. nationale, 1950. 
         (<abbr>Cf.</abbr> <a href="http://data.bnf.fr/12554392/francois_bayle_croix_gammee_contre_caducee/"><abbr>BNF</abbr></a>)
+      </li>
+      <li lang="de">Brühe, Roland; Theis, Sabine: 
+        <a href="http://rolandbruehe.de/ludwik-fleck/ludwik-fleck-person/">Zur Person Ludwik Fleck</a>,
+        <span lang="en">excerpted from</span> 
+        <a class="booktitle" href="http://www.pflegeportal.ch/pflegeportal/Pflege_Portal_Suche_in_WISE.php?evn=srm&kc=0,23,0,0,0&pmids=9&st=1&rpp=3&fkid=fkid&nsfkid=15,1&msv=">Denkstile und professioneller Pflegeprozess</a> 
+        (Diplomarbeit, Katholische Hochschule Nordrhein-Westfalen, 05.07.2004 - 20.09.2009).
+        (Brühe, Roland; Theis, Sabine: 
+        <i class="booktitle">Denkstile und professioneller Pflegeprozess. Wie beurteilen Lehrende an Krankenpflegeschulen Pflegeplanungen von SchülerInnen?</i>,
+        Saarbrücken, <abbr>VDM</abbr> Verlag Dr. Müller, 2008. <abbr>ISBN</abbr>978-3-639-07662-2.)
       </li>
       <li lang="de">Chołuj, Bożena; Joerden, Jan C., <abbr>Hrsg.</abbr>:
         <i class="booktitle">Von der wissenschaftlichen Tatsache zur Wissensproduktion: Ludwik Fleck und seine Bedeutung für die Wissenschaft und Praxis</i>.
