Fleck 2nd bib: Schäfer 1993, Werner 2013.

--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -677,6 +677,10 @@
         <a href="http://plato.stanford.edu/entries/fleck/">Ludwik Fleck</a>,
         <i class="website">Stanford Encyclopedia of Philosophy</i>, 2012.
       </li>
+      <li><span lang="de">Schäfer, Lothar</span>:
+        <a href="http://link.springer.com/chapter/10.1007/978-94-017-2960-4_2">On The Scientific Status of Medical Research: Case Study and Interpretation According to Ludwik Fleck</a>,
+        <i>Science, Technology, and the Art of Medicine</i> (1993), 
+        Volume 44 of the series <i>Philosophy and Medicine</i>, p. 23-38.
       <li><span lang="de">Schnelle, Thomas</span>:
         &ldquo;<i class="booktitle">Genesis and Development of a Scientific Fact</i>, by Ludwik Fleck, ed. by
         Thaddeus J. Trenn and Robert K. Merton, trans, by F. Bradley and T. J. Trenn,
@@ -725,6 +729,10 @@
       <li>Weisz, George M.; Grzybowski, Andrzej:
         <a href="http://www.ima.org.il/FilesUpload/IMAJ/0/39/19794.pdf">Medical Discoveries in the Ghettos: The Anti-Typhus Battle</a>,
         <i class="journal">Israel Medical Association Journal</i>, <abbr>Vol.</abbr> 13 (2011): 261–265
+      </li>
+      <li lang="de">Werner, Sylvia: 
+        <a href="http://kops.uni-konstanz.de/handle/123456789/25307">Science oder Fiction? : Stanisław Lem liest Ludwik Fleck</a>,
+        <i><abbr>IFK</abbr> now</i>, 1 (2013): 10-11.
       </li>
       <li><a href="https://en.wikipedia.org/wiki/Yad_Vashem">Yad Vashem</a> <a href="https://en.wikipedia.org/wiki/Page_of_Testimony">testimony</a>:
         <a href="http://www.ludwik-fleck-kreis.de/uploadfiles/documents/0703_171830_Fleck_Yad_Vahem_testemony.pdf">Document 0-3/650 Yad Vashem, Jerusalem: Prof. Dr Ludwik Fleck – bacteriologist; Ramat – Awiw, Beit Brodetzki</a>
