--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -177,6 +177,17 @@
           <li><a href="https://www.youtube.com/watch?v=K7JuX1MXYn4">Samenvatting van de hele avond</a>.</li>
         </ul>
       </li>
+      <li lang="fr">
+        <a href="https://www.youtube.com/watch?v=wgEFC44at58">L’athéisme, l’opium du peuple de gauche - Pierre Tevanian</a>
+        (2015).
+        <span lang="en">Podcast / recording of a talk by the French philosophy professor/teacher and essayist</span>
+        <a href="https://fr.wikipedia.org/wiki/Pierre_Tevanian" hreflang="fr">Pierre Tevanian</a>
+        <span lang="en">based on his book</span>
+        <i class="booktitle">La haine de la religion: Comment l'athéisme est devenu l'opium du peuple de gauche</i>
+        (La Découverte, 2013. 128 p. 
+        <a href="http://www.editionsladecouverte.fr/catalogue/index-La_haine_de_la_religion-9782707175908.html" hreflang="fr"><abbr>ISBN</abbr> 9782707175908</a>.)
+        <span lang="en">(<i class="booktitle">Hate against Religion: How Atheism Became the Opium of the Left</i>).</span>
+      </li>
     </ul>
     -->
 
