+ h2 'Prediction, Explanation and Understanding'

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -70,6 +70,10 @@
         </blockquote>
         (See also the links to related articles at the bottom of the blogpost.)<!-- @@todo -->
       </li>
+      <li>Blackburn, Simon:
+        <a href="https://www.youtube.com/watch?v=OC-Wo0aYn_c">Why Philosophy of Science</a>,
+        15-minute excerpt from a longer interview.<!-- @@check -->
+      </li>
       <li>
         Alex Rosenberg, author of 
         <a href="https://www.routledge.com/products/9780415891776" class="booktitle">Philosophy of Science: A Contemporary Introduction</a>,
@@ -282,15 +286,15 @@
       </li>
       <li>John Wilkins: 
         <a href="https://www.youtube.com/watch?v=KHrpqc6QvME">What is the Philosophy of Science All About?</a>
-        (Melbourne, Australia, 23-24 August 2014). .
+        (Melbourne, Australia, 23-24 August 2014).
         This is a 37-minute video that explains what philosophy of science concerns itself with.
         Here is how Wilkins introduces the goal of his lecture: <br />
         <q>Philosophers argue about issues and ideas that can't be resolved by appealing to the facts or, for that matter, to simple logic.
           (&hellip;) So philosophy of science obviously is applying that approach to science itself. (&hellip;)
           Philosophy has always focused in some way upon the science of the day. 
           But modern philosophy of science has a number of key topics, and the topics I have chosen to talk about are
-          evidence, theory, method and some specific problems for specific sciences. 
-        </q><br />
+          evidence, theory, method and some specific problems for specific sciences.</q>
+        <br />
         The slides for the lecture are available on 
         <a href="http://www.slideshare.net/jswilkins/what-is-po-s">Slideshare</a>.
         The video is also available on <a href="http://wn.com/john_wilkins">WN.com</a>.
@@ -366,6 +370,15 @@
         This is a book about the central concepts and questions in 
         quantum physics for physicists and philosophers.
       </li>
+      <li><a href="https://www.youtube.com/watch?v=DACcyBN5Jng">Philosophy of Physics</a>
+        is a 20-minute video by Eugene Khutoryansky.<!-- @@watch -->
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=lklTdctDdIo">Why Philosophy of Biology?</a>:
+        a lecture by John Dupré at the occasion of the launch of 
+        the Centre for Science and Philosophy at the University of Bristol on Tuesday 4 December 2012.
+        (Duration: 23 minutes.)<!-- @@watch -->
+      </li>
     </ul>
 
     <h2>Anthologies</h2>
@@ -404,7 +417,7 @@
         <a href="https://jhupbooks.press.jhu.edu/content/science-rules"><abbr>ISBN</abbr> 978 08 01 87 94 49</a>.
         <br />This book contains selected texts on the following topics: 
         Descartes' rationalism, Newton's inductivism, hypothetico-deductivism (Mill, Whewell, Popper),
-        realism versus antirealism (Duhem, van Fraassen, Perrin, Salmon) and 
+        realism versus anti-realism (Duhem, van Fraassen, Perrin, Salmon) and 
         universal rules of method (Galilei, Feyerabend, Kuhn). The book also contains
         several essays by Achinstein about most of these topics.
         The examples of scientific theories in the book all come from physics.
@@ -481,6 +494,55 @@
       </li>
     </ul>
 
+    <h2>Prediction, Explanation and Understanding</h2>
+    <ul>
+      <li><span lang="de">Hoyningen-Huene, Paul</span>:
+        <a href="https://www.youtube.com/watch?v=2fABS9loKmM">What is the relation between prediction and explanation?</a>,
+        video of a keynote talk at the 
+        <a href="http://www.ea-aw.org/events/annual-ea-conferences/annual-ea-conference-2015.html">2015 Annual <abbr>EA</abbr> Conference</a>,
+        11-12 May 2015 (organised by the <abbr>EA</abbr> European Academy of Technology and Innovation Assessment).
+      </li>
+      <li lang="fr">Thom, René: 
+        <i class="booktitle">Prédire n’est pas expliquer</i>. (1993) Champs Sciences. Flammarion, 2009. 
+        <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=35024&levelCode=home"><abbr>ISBN</abbr> 9782081224988</a>.
+        <br /><span lang="en"><a href="https://en.wikipedia.org/wiki/Ren%C3%A9_Thom" lang="fr">René Thom</a> 
+        was a French mathematician who is probably best know as the founder of
+        <a href="https://en.wikipedia.org/wiki/Catastrophe_theory">catastrophy theory</a>.
+        <!-- See also P. de Brem: "René Thom, mathématicien philosophe", Banque de Savoirs, Essonne, 01.06.2005: http://www.savoirs.essonne.fr/thematiques/la-matiere/mathematiques/rene-thom-mathematicien-philosophe/ -->
+      </li>
+    </ul>
+
+    <!-- 
+    <h2>Realism versus Anti-Realism</h2>
+    <ul>
+      <li>Blackburn, Simon:
+        <a href="https://www.youtube.com/watch?v=CqB51cc1GnY">Realism vs Antirealism</a>,
+        a 10-minute excerpt from an interview (uploaded July 2015).
+      </li>
+      <li>Grayling, A. C.:
+        <a href="https://www.youtube.com/watch?v=dfWasaqP3G8">Realism versus Anti-realism</a>.
+      </li>
+      <li><a href="http://www.janlindemans.com/" lang="nl" hreflang="en">Lindemans, Jan Willem</a>
+        created a series of three videos on realism versus anti-realism:
+        <a href="https://www.youtube.com/watch?v=bzqnIJ6qcFw">I: Absolutism and relativism</a>,
+        <a href="https://www.youtube.com/watch?v=MBK37N2vYcw">II: Materialism and idealism</a>,
+        <a href="https://www.youtube.com/watch?v=tZcykVub4Ws">III: Plato, idealist or realist?</a>.
+      </li>
+      <li>Bigelow, John:
+        <a href="https://www.youtube.com/watch?v=1jqwDgilDJc">Barry Taylor: Philosophical Realism &amp; Anti-Realism</a>,
+        lecture at the University of Melbourne (71 minutes; uploaded February 2013).
+      </li>
+      <li>Chakravartty, Anjan: 
+        <a href="http://plato.stanford.edu/entries/scientific-realism/">Scientific Realism</a>,
+        <i class="website">The Stanford Encyclopedia of Philosophy</i>.
+      </li>
+      <li>Boyd, Richard:
+        <a href="http://plato.stanford.edu/archives/sum2010/entries/scientific-realism/">Scientific Realism</a>,
+        <i class="website">The Stanford Encyclopedia of Philosophy</i>, 2010 edition.
+        (This is an older version of the previous article.)
+      </li>
+    </ul>
+    -->
 
     <h2>Other Resources</h2>
     <ul>
