+ Gadamer: Geschichte der Philosophie
Gadamer: Geschichte der Philosohie (YT; 2000); Kwame Anthony Appiah:
What does a philosopher do? (YT, BigThink).

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -311,8 +311,7 @@
     <p>YouTube playlists and videos about the history of philosophy:</p>
     <ul>
       <li>
-        <a href="https://www.youtube.com/playlist?list=PL-0zpu2toena49fxDoMqtE_vfMoHPSEFs">History 
-        of Philosophy</a>
+        <a href="https://www.youtube.com/playlist?list=PL-0zpu2toena49fxDoMqtE_vfMoHPSEFs">History of Philosophy</a>
         is a course by Arthur Holmes, who is described as a
         &ldquo;Christian scholar and philosopher&rdquo;.
         The course focuses on Ancient Greek philosohy.
@@ -321,9 +320,16 @@
         However, a longer, more complete playlist of the course, consisting of 
         81 videos, is available on the channel of Wheaton College.
         This version,
-        <a href="https://www.youtube.com/playlist?list=PL9GwT4_YRZdBf9nIUHs0zjrnUVl-KBNSM">A
-        History of Philosophy</a>, also covers philosophy after Antiquity
-        up to the 20th century.
+        <a href="https://www.youtube.com/playlist?list=PL9GwT4_YRZdBf9nIUHs0zjrnUVl-KBNSM">A History of Philosophy</a>, 
+        also covers philosophy after Antiquity up to the 20th century.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PLthgEimViqIlxURNRdYaqNWbrFcd8loEw"
+        lang="de">Hans-Georg Gadamer: Geschichte der Philosophie</a>
+        is a sequence of 7 videos in which the German philosopher 
+        <a href="https://en.wikipedia.org/wiki/Hans-Georg_Gadamer">Gadamer (1900 - 2002)</a>
+        talks about the history of philosophy from Antiquity to 20th-century hermeneutics.
+        The source is a <abbr>TV</abbr> series recorded in the year 2000.
       </li>
       <!-- Faith and Science Conference (2014): Genesis and Genetics: https://www.youtube.com/playlist?list=PL-0zpu2toenb3bETgPaYB7QrOVpVkzUIA -->
     </ul>
@@ -353,6 +359,10 @@
           </li>
         </ul>
       </li>
+      <li>Appiah, Kwame Anthony:
+        <a href="https://www.youtube.com/watch?v=44FQpKTEJ3M">What does a philosopher do?</a>
+        (10-minute video on the Big Think channel).
+      </li> 
     </ul>
 
   </main>
