+ Realism vs. anti-realism.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -512,7 +512,7 @@
       </li>
     </ul>
 
-    <!-- 
+
     <h2>Realism versus Anti-Realism</h2>
     <ul>
       <li>Blackburn, Simon:
@@ -521,6 +521,9 @@
       </li>
       <li>Grayling, A. C.:
         <a href="https://www.youtube.com/watch?v=dfWasaqP3G8">Realism versus Anti-realism</a>.
+      </li>
+      <li>Schellenberg, J. L.: 
+        <a href="https://www.youtube.com/watch?v=Z_PmQRUa3_w">Realism versus Anti-realism</a>.
       </li>
       <li><a href="http://www.janlindemans.com/" lang="nl" hreflang="en">Lindemans, Jan Willem</a>
         created a series of three videos on realism versus anti-realism:
@@ -541,8 +544,21 @@
         <i class="website">The Stanford Encyclopedia of Philosophy</i>, 2010 edition.
         (This is an older version of the previous article.)
       </li>
+      <li>Putnam, Hilary: 
+        <a href="https://www.youtube.com/watch?v=-1OESPPs68E">Naive Realism and Qualia</a>,<!-- @@check -->
+        a talk delivered at the occasion of the 20th anniversary of the 
+        <a href="http://ratio.huji.ac.il/">Federmann Center for the Study of Rationality</a>
+        at the Hebrew University of Jerusalem.
+        The video is also available on the 
+        <a href="http://ratio.huji.ac.il/node/2302">centre's website</a>.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PLF9TqKNSisvLWcOiLwHj7sLM7CJuT6pY-">Phil Science Realism anti-realism</a>:
+        a collection of 9 short videos, some of which discusses
+        realism versus anti-realism.
+      </li>
     </ul>
-    -->
+
 
     <h2>Other Resources</h2>
     <ul>
